--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run test && lint-staged"
     }
   },
   "repository": {
@@ -37,6 +37,7 @@
     "ts-jest": "^28.0.8"
   },
   "dependencies": {
+    "@cafeca/keccak": "^0.8.4",
     "eslint": "^8.22.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.2"
